app-test/testdata/typesystem/neg/constant-local-variable-immutability/src/const.cal
namespace constant:
    actor LocalVariableImmutability() ==> :
        do
            begin
            var
                int a = 0
            do
                a := a + 1; // error
            end
        end
    end
end